plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ro.uvt.pokedex'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.json:json:20240303'
    // SLF4J and Logback for logging
    implementation 'org.mvel:mvel2:2.5.2.Final'
    implementation 'org.slf4j:slf4j-api'
    implementation 'ch.qos.logback:logback-classic'
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.apache.poi:poi:5.2.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.2'
    implementation 'com.opencsv:opencsv:5.8'
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('verifyFrontendAssets', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-assets'
}

tasks.register('verifyTemplateAssets', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-template-assets'
}

tasks.named('check') {
    dependsOn tasks.named('verifyFrontendAssets')
    dependsOn tasks.named('verifyTemplateAssets')
}
